--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,20 @@
-@"
 node_modules/
 .env
+.env.*
 uploads/
-"@ | Out-File -Encoding utf8 .gitignore
+dist/
+build/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+logs/
+*.log
+
+# OS/editor
+.DS_Store
+Thumbs.db
+*.swp
+.idea/
+.vscode/
